--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -127,7 +127,7 @@ jobs:
           sudo gem install kitchen-ansible
           sudo gem install kitchen-sync
           sudo gem install kitchen-lxd_cli
-          sudo gem install kitchen-inspec
+          sudo gem install kitchen-inspec --version "=0.26.0"
           sudo apt-get install -y libsodium23
           sudo gem install rbnacl --version 4.0.2
           sudo gem install bcrypt_pbkdf rbnacl-libsodium
