--- a/.github/workflows/default-lxd.yml
+++ b/.github/workflows/default-lxd.yml
@@ -55,7 +55,7 @@ jobs:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       ANSIBLE_ROLE: juju4.misp
       LXDIMAGE: "${{ matrix.distribution }}-${{ matrix.version }}"
-      LXDGUEST: "default-${{ matrix.distribution }}-${{ matrix.version }}"
+      LXDGUEST: "default-${{ matrix.distribution }}-${{ matrix.version2 }}"
 
     steps:
       - uses: actions/checkout@v3
