--- a/.github/workflows/default-lxd.yml
+++ b/.github/workflows/default-lxd.yml
@@ -130,8 +130,8 @@ jobs:
           sudo lxc exec $LXDGUEST -- pwd
           sudo lxc exec $LXDGUEST -- ip address
           sudo lxc exec $LXDGUEST -- ip route
-          sudo lxc exec $guest -- dhclient eth0
-          sudo lxc exec $guest -- ping -c 1 8.8.8.8
+          sudo lxc exec $LXDGUEST -- dhclient eth0
+          sudo lxc exec $LXDGUEST -- ping -c 1 8.8.8.8
           [ "X${{ matrix.distribution }}" == "Xdebian" -o "X${{ matrix.distribution }}" == "Xubuntu" ] && sudo lxc exec $LXDGUEST -- apt-get update
           [ "X${{ matrix.distribution }}" == "Xdebian" -o "X${{ matrix.distribution }}" == "Xubuntu" ] && sudo lxc exec $LXDGUEST -- apt-get install -y python3-pip
           sudo lxc exec $LXDGUEST -- pip3 install ansible
