ci(default-lxd): fix lxdbr0 network attach

--- a/.github/workflows/default-lxd.yml
+++ b/.github/workflows/default-lxd.yml
@@ -95,8 +95,8 @@ jobs:
           sudo lxc network list
           sudo lxc network create lxdbr0
           sudo lxc network show lxdbr0
-          sudo lxc network attach-profile lxdbr0 default ens4
-          sudo lxc profile device get default ens4 nictype || true
+          sudo lxc network attach-profile lxdbr0 default eth0
+          sudo lxc profile device get default eth0 nictype || true
           sudo service lxd restart || true
           ps ax | grep dnsmasq
           systemctl status -l --no-pager lxd || true
