--- a/.github/workflows/default-lxd.yml
+++ b/.github/workflows/default-lxd.yml
@@ -54,7 +54,7 @@ jobs:
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       ANSIBLE_ROLE: juju4.misp
-      LXDIMAGE: "${{ matrix.distribution }}-${{ matrix.version }}"
+      LXDIMAGE: "${{ matrix.distribution }}:${{ matrix.version }}"
       LXDGUEST: "default-${{ matrix.distribution }}-${{ matrix.version2 }}"
 
     steps:
