--- a/.github/workflows/default-lxd.yml
+++ b/.github/workflows/default-lxd.yml
@@ -100,6 +100,7 @@ jobs:
       - name: Start lxd instance
         run: |
           set -x
+          [ "X${{ matrix.distribution }}" != "Xubuntu" ] && export LXDIMAGE="images:${{ matrix.distribution }}/${{ matrix.version }}/amd64"
           sudo lxc launch $LXDIMAGE $LXDGUEST
       - name: Mount GITHUB_WORKSPACE in lxd
         run: |
