--- a/.github/workflows/default-vagrant.yml
+++ b/.github/workflows/default-vagrant.yml
@@ -69,6 +69,12 @@ jobs:
           # add user to group
           sudo usermod -a -G libvirt $USER
 
+      - name: Set up vagrant
+        run: |
+          wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+          sudo apt update && sudo apt install vagrant
+
       - name: Set up vagrant-libvirt
         run: |
           vagrant plugin install vagrant-libvirt
