chore: fix spellcheck, ansible legacy module

--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -22,7 +22,7 @@
   until: pkg_result is success
 
 - name: RedHat | Install Remi repo
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: "http://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm"
     state: present
   when: "'remi-release' not in ansible_facts.packages"
