ci(default): disable snuffleupagus on ubuntu-24.04

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -34,6 +34,8 @@
     - name: 24.04 | Set fact
       ansible.builtin.set_fact:
         misp_version: '2.5'
+        misp_php_snuffleupagus_enable: false
+        harden_php7_snuffleupagus: false
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 24)
   vars:
     misp_pymisp_validation_fatal: false
