ci(default): disable misp-modules for 24.04 - ImportError: cannot import name 'copy_file' from 'setuptools.command.build_ext'

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -36,6 +36,7 @@
         misp_version: '2.5'
         misp_php_snuffleupagus_enable: false
         harden_php7_snuffleupagus: false
+        misp_modules_enable: false
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 24)
   vars:
     misp_pymisp_validation_fatal: false
