--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,8 +18,8 @@
     msg: "MISP 2.5 requires PHP 8 which starts with Ubuntu 24.04 and Debian 12"
   when:
     - misp_version == '2.5'
-    - not (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= 24)
-    - not (ansible_distribution == 'Debian' and ansible_distribution_major_version >= 12)
+    - not (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version | int >= 24)
+    - not (ansible_distribution == 'Debian' and ansible_distribution_major_version | int >= 12)
 
 - name: Import debian
   ansible.builtin.import_tasks: debian.yml
